<resources>
    <string name="app_name">ConstrainLayout</string>
    <string name="var1">ini pesan</string>
    <string name="bsignin">Sign-In</string>
    <string name="tLogin">LOGIN</string>
    <string name="tData">Data Anda</string>
    <string name="tEmail">Email:</string>
    <string name="tPassword">Password:</string>
    <string name="txemail">Ini hasil Email</string>
    <string name="txpassword">Ini hasil Password</string>
    <string name="label2">Login Berhasil</string>
    <string name="mDaftar">Pendaftaran</string>
    <string name="ldaftar">Daftar</string>
    <string name="enama">Masukkan Nama</string>
    <string name="eemail">Masukkan Email</string>
    <string name="epass">Masukkan Password</string>
    <string name="erepas">Masukkan Password Kembali</string>
    <string name="edalamat">Masukkan Alamat</string>
</resources>